@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class TableTypeController {
    - _tableTypeRepositories: ITableTypeRepositories
    + UpdateTableType(Guid id, AddEditTypeRequestDTO updateTableType): Task<IActionResult>
}

interface ITableTypeRepositories<<interface>>  {
    + UpdateTableType(Guid id, AddEditTypeRequestDTO updateTableType): Task<GetTableTypeResponseDTO>
}

class TableTypeRepositories {
    - _tableTypeDao: TableTypeDAO
    + UpdateTableType(Guid id, AddEditTypeRequestDTO updateTableType): Task<GetTableTypeResponseDTO>
}

class TableTypeDAO {
    - _client.From<TableType> : ISupabaseTable<TableType>    
    + UpdateTableType(Guid id, AddEditTypeRequestDTO updateTableType): Task<GetTableTypeResponseDTO>
}

class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableTypeController
TableTypeController -- ITableTypeRepositories
ITableTypeRepositories <|-- TableTypeRepositories
TableTypeRepositories "1"--"1..*" TableTypeDAO

TableTypeDAO "1"--"0..*" TableType
@enduml